SEFCNet/infra/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sefcnet-server
  namespace: sefcnet
spec:
  selector:
    app: sefcnet-server
  ports:
  - name: http
    port: 5000
    targetPort: http
  - name: dashboard
    port: 8501
    targetPort: dashboard
  - name: metrics
    port: 8080
    targetPort: metrics
  type: LoadBalancer
